--- a/#src/index.html
+++ b/#src/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
   @@include('_head.html', {
-    "title": "Главная",
+    "title": "Gulp template",
   })
   <body>
-    <div class="wrapper">
-      @@include('_header.html', {})
-      <main class="page">
+    @@include('_header.html', {})
 
-      </main>
-      @@include('_footer.html', {})
-    </div>
+    @@include('_footer.html', {})
     @@include('_popup.html', {})
     @@include('_js.html', {})
   </body>
