--- a/#src/index.html
+++ b/#src/index.html
@@ -5,7 +5,7 @@
   })
   <body>
     @@include('_header.html', {})
-
+    @@include('_content.html', {})
     @@include('_footer.html', {})
     @@include('_popup.html', {})
     @@include('_js.html', {})
